# open-advocacy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: exceptions.py  main.py
backend/app/core/: config.py
backend/app/data/: elms_scorecard_data.py  il_legislators_data.py  il_scorecard_data.py  ward_zoning_data.py
backend/app/db/: provider_factory.py  sql.py
backend/app/geo/: postgres.py
backend/app/imports/: base.py
backend/app/scripts/: db_diagnostic.py  (+4 more)
backend/scripts/: fetch_elms_scorecard_data.py  fetch_openstates_il_legislators_data.py  fetch_openstates_il_scorecard_data.py  fetch_ward_zoning_data.py  import_adu_project_data.py  import_data.py  import_example_project_data.py  import_scorecard_projects.py  init_db.py  initialize_app.py  scorecard_project_data.py
backend/tests/: conftest.py  factories.py  mock_provider.py  test_api_admin_scorecard.py  test_api_auth.py  test_api_entities.py  test_api_groups.py  test_api_jurisdictions.py  test_api_projects.py  test_api_scorecard.py  test_api_status.py  test_auth.py  test_chicago_city_clerk_elms.py  test_district_service.py  test_entity_importer.py  test_entity_service.py  test_group_service.py  test_import_orchestrator.py  test_import_scorecard_projects.py  test_init_db.py  test_initialize_app.py  test_jurisdiction_service.py  test_openstates_bills_client.py  test_openstates_normalize.py  test_project_service.py  test_scorecard_refresh_service.py  test_scorecard_service.py  test_status_service.py  test_user_service.py  test_ward_zoning.py
(+125 files in other folders)
